# external-dns-technitium-webhook

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: renovate.json5
.github/workflows/: docker-publish.yaml  renovate.yaml
src/: app.rs  config.rs  handlers.rs  main.rs  models.rs
src/technitium/: client.rs  models.rs
